@@ -1,3 +1,10 @@
+2006-08-02 Jens Tkotz <jens@peino.de> 1.5.4-svn-b12
+
+ * Fix: JS warning in ImageMap when no ImageMap is available.
+   Thanks to StephaneT from forums.
+
+ * Little CSS changes in jenskin.
+
 2006-07-29 Jens Tkotz <jens@peino.de> 1.5.4-svn-b11
 
  * Fix: Order of captions was mixed in IE and Opera when given direct in the form.
